[ACC-11] Setup arquillian infrastructure for futur tests